[package]
name = "obs-oauth-cf"
version = "0.1.1"
authors = ["dennis <dennis@obsproject.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/obsproject/obs-oauth-cf"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.15"
serde_urlencoded = "0.7.1"
serde_json = "1.0.67"
serde = "1.0.136"
rand = "0.8.5"
getrandom = {version = "0.2.6", features = ["js"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
